--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Include the SkelzEngine -->
 <script src="SkelzEngine/libs/underscore-min.js"></script>
+<script src="game/IA/Event.js"></script>
 <script src="SkelzEngine/SkelzEngine.js"></script>
 <script src="game/room/Room1.js"></script>
 <script src="game/entity/Player.js"></script>
