--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 <!-- Include the SkelzEngine -->
 <script src="SkelzEngine/libs/underscore-min.js"></script>
 <script src="game/IA/Event.js"></script>
-<script src="game/IA/WrapperConsoleLog.js"></script>
 <script src="game/Controller/KeyboardController.js"></script>
 <script src="game/Controller/MouseController.js"></script>
 <script src="game/Controller/NullController.js"></script>
@@ -40,9 +39,10 @@
 <script src="game/IA/Environement.js"></script>
 <script src="game/IA/EnvironmentFactory.js"></script>
 <script src="game/IA/Ia.js"></script>
-<script src="game/IA/Logger.js"></script>
-<script src="game/IA/WebLogger.js"></script>
-<script src="game/IA/MultipleLogger.js"></script>
+<script src="game/Logger/WrapperConsoleLog.js"></script>
+<script src="game/Logger/Logger.js"></script>
+<script src="game/Logger/WebLogger.js"></script>
+<script src="game/Logger/MultipleLogger.js"></script>
 
 <script>
 //style="width: 96vw; height: 96vh;"
