--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	 <title>Learn JavaScript</title>
 	</head>
 
-	<body >
+	<body style="overflow:hidden;">
 		<canvas id="game" width="480px" height = "480px" > Your Web Navigator do not support Canvas</canvas>
 	</body>
 
