--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ elementCanvas.width = 480;
 elementCanvas.height = 480;
 var ctx = elementCanvas.getContext("2d");
 
+// Initialize le skelzEngine
 SkelzEngine.init(function(){
 	
 	ctx.strokeStyle = "#00FF00";
