--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <fieldset>
     <legend>Controlleur</legend>
     <div>
-        <button type="button" id="mouse-controller" onclick="SkelzEngine.setController(new MouseController())">Mouse</button>
-        <button type="button" id="keyboard-controller" onclick="SkelzEngine.setController(new KeyboardController())">Keyboard</button>
+        <button type="button" id="mouse-controller">Mouse</button>
+        <button type="button" id="keyboard-controller" >Keyboard</button>
         <button type="button" id="touch-controller">Touch</button>
         <button type="button" id="gamepad-controller">Gamepad</button>
-        <button type="button" id="null-controller" onclick="SkelzEngine.setController(new NullController())">Aucun</button>
+        <button type="button" id="null-controller">Aucun</button>
     </div>
 </fieldset>
 
@@ -34,15 +34,16 @@
 </fieldset>
 
 </html>
-
+<script src="require.js"></script>
+<script type="text/javascript">
+    requirejs.config({
+        baseUrl : ""
+    });
+</script>
 <!-- Include the SkelzEngine -->
 <script src="SkelzEngine/libs/underscore-min.js"></script>
 <script src="game/IA/Event.js"></script>
-<script src="game/Controller/KeyboardController.js"></script>
-<script src="game/Controller/MouseController.js"></script>
-<script src="game/Controller/TouchController.js"></script>
 <script src="game/Controller/NullController.js"></script>
-<script src="game/Controller/GamepadController.js"></script>
 <script src="SkelzEngine/SkelzEngine.js"></script>
 
 <!-- custom engine factory -->
@@ -54,7 +55,7 @@
 <script src="SkelzEngine/modules/Entity.js"></script>
 
 <script src="https://code.createjs.com/soundjs-0.6.0.min.js"></script>
-
+<script src="http://cdnjs.cloudflare.com/ajax/libs/pixi.js/2.2.8/pixi.js"></script>
 <script src="game/global/Global.js"></script>
 <script src="game/room/Room1.js"></script>
 <script src="game/UI/Gui.js"></script>
@@ -84,27 +85,42 @@ if(error !== true) InterfaceValidity.throwError(error);
 
 var setMouseController = function()
 {
-    SkelzEngine.setController(new MouseController())
+    require(["game/Controller/MouseController"], function(KeyboardController)
+    {
+        SkelzEngine.setController(new MouseController());
+    });
 };
 
 var setKeyboardController = function()
 {
-    SkelzEngine.setController(new KeyboardController());
+    require(["game/Controller/KeyboardController"], function(KeyboardController)
+    {
+        SkelzEngine.setController(new KeyboardController());
+    });
 };
 
 var setTouchController = function()
 {
-    SkelzEngine.setController(new TouchController());
+    require(["game/Controller/TouchController"], function(KeyboardController)
+    {
+        SkelzEngine.setController(new TouchController());
+    });
 };
 
 var setNullController = function()
 {
-    SkelzEngine.setController(new NullController());
+    require(["game/Controller/NullController"], function(KeyboardController)
+    {
+        SkelzEngine.setController(new NullController());
+    });
 };
 
 var setGamepadController = function()
 {
-    SkelzEngine.setController(new GamepadController());
+    require(["game/Controller/GamepadController"], function(KeyboardController)
+    {
+        SkelzEngine.setController(new GamepadController());
+    });
 };
 
 document.querySelector("#mouse-controller").addEventListener("touchstart", setMouseController);
