--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<html style=" display: inline-block;margin: 0px auto;text-align: center;">
+﻿<html style=" display: inline-block; margin: 0px auto; text-align: center;">
 	<head>
-	 <title>Learn JavaScript</title>
+	 <title>Galactic Polygon (Alpha 0.1)</title>
 	</head>
-	
+	<h2> Galactic Polygon (Alpha 0.1) </h2>
 	<body >
-		<canvas id="game" width="480px" height = "480px" > Your Web Navigator do not support Canvas</canvas>
+		<canvas id="game" width="256px" height = "256px" style="width: 512px; height: 512px;"> Your Web Navigator do not support Canvas</canvas>
 	</body>
-	
+	<h3> Controlles: Clavier(Flèches Dirrectionnelle & Barre Espace)</h3>
 	
 	
 </html>
 
 <!-- Include the SkelzEngine -->
 <script src="SkelzEngine/SkelzEngine.js"></script>
+<script src="game/global/Global.js"></script>
 <script src="game/room/Room1.js"></script>
 <script src="game/entity/Player.js"></script>
 <script src="game/entity/Projectile.js"></script>
 <script src="game/entity/Eclat.js"></script>
+<script src="game/entity/Monster.js"></script>
 
 <script>
 //style="width: 96vw; height: 96vh;"
@@ -24,11 +26,15 @@
 var canvasContext2d = document.getElementById("game").getContext("2d");
 
 var elementCanvas = document.createElement("canvas");
-elementCanvas.width = 480;
-elementCanvas.height = 480;
+elementCanvas.width = 256;
+elementCanvas.height = 256;
 var ctx = elementCanvas.getContext("2d");
 
-// Initialize le skelzEngine
+canvasContext2d.imageSmoothingEnabled= false;
+ctx.imageSmoothingEnabled= false;
+canvasContext2d.mozImageSmoothingEnabled = false;
+ctx.mozImageSmoothingEnabled = false;
+
 SkelzEngine.init(function(){
 	
 	ctx.strokeStyle = "#00FF00";
