--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="game/entity/Projectile.js"></script>
 <script src="game/entity/Eclat.js"></script>
 <script src="game/entity/Monster.js"></script>
+<script src="game/util-general/GameHud.js"></script>
 
 <script>
 //style="width: 96vw; height: 96vh;"
